syntax = "proto3";
package orders.transactions.cancel;
import "assetmantle/base/ids/v1/identityID.v1.proto";
import "assetmantle/base/ids/v1/orderID.v1.proto";

message Message{
  string from = 1;
  ids.IdentityID from_i_d = 2;
  ids.OrderID order_i_d = 3;
}
